Documentation and Termination Criteria

--- a/doc/source/algorithms/genetic_algorithm.ipynb
+++ b/doc/source/algorithms/genetic_algorithm.ipynb
@@ -59,19 +59,7 @@
    "metadata": {
     "code": "algorithms/usage_ga.py"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best solution found: \n",
-      "X = [0.99867738 0.99997405 0.99699339 0.99920783 0.95940543 0.99069101\n",
-      " 0.99063593 0.9609818  0.92583335 2.91241958 2.53337571 2.751624\n",
-      " 0.9886664 ]\n",
-      "F = [-13.98795355]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pymoo.algorithms.so_genetic_algorithm import GA\n",
     "from pymoo.factory import get_problem\n",
@@ -87,10 +75,7 @@
     "               algorithm,\n",
     "               termination=('n_gen', 50),\n",
     "               seed=1,\n",
-    "               verbose=False)\n",
-    "\n",
-    "print(\"Best solution found: \\nX = %s\\nF = %s\" % (res.X, res.F))\n",
-    "\n"
+    "               verbose=False)\n"
    ]
   },
   {
