--- a/doc/source/misc/results.ipynb
+++ b/doc/source/misc/results.ipynb
@@ -97,12 +97,12 @@
     {
      "data": {
       "text/plain": [
-       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x119b6dc90>,\n",
-       " Population([<pymoo.model.individual.Individual object at 0x119b77910>,\n",
-       "             <pymoo.model.individual.Individual object at 0x119b77dd0>,\n",
-       "             <pymoo.model.individual.Individual object at 0x119b77e10>,\n",
-       "             <pymoo.model.individual.Individual object at 0x119b77e90>,\n",
-       "             <pymoo.model.individual.Individual object at 0x119b77d90>],\n",
+       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x12589afd0>,\n",
+       " Population([<pymoo.model.individual.Individual object at 0x1259c6190>,\n",
+       "             <pymoo.model.individual.Individual object at 0x1259c6350>,\n",
+       "             <pymoo.model.individual.Individual object at 0x1259c6290>,\n",
+       "             <pymoo.model.individual.Individual object at 0x1259c6650>,\n",
+       "             <pymoo.model.individual.Individual object at 0x1259c6550>],\n",
        "            dtype=object))"
       ]
      },
@@ -326,16 +326,17 @@
     {
      "data": {
       "text/plain": [
-       "array([[4.16802606e-03, 3.23671344e+00],\n",
-       "       [9.71157804e-01, 2.38786959e+00],\n",
-       "       [1.58596486e-02, 3.20227917e+00],\n",
-       "       [2.47327329e-01, 2.57134146e+00],\n",
-       "       [2.10946801e-01, 3.00214052e+00],\n",
-       "       [2.11374949e-01, 2.96669503e+00],\n",
-       "       [1.30395200e-04, 3.90195863e+00],\n",
-       "       [4.41596137e-04, 3.52101976e+00],\n",
-       "       [2.47371097e-02, 3.06413386e+00],\n",
-       "       [1.44936500e-04, 3.77754170e+00]])"
+       "array([[4.02723032e-01, 2.92285190e+00],\n",
+       "       [2.42936792e-03, 3.09049957e+00],\n",
+       "       [6.42640810e-05, 3.80452248e+00],\n",
+       "       [9.03843390e-02, 2.97779402e+00],\n",
+       "       [7.51601609e-04, 3.12489259e+00],\n",
+       "       [2.66638116e-05, 4.15122904e+00],\n",
+       "       [5.32367109e-01, 2.91333135e+00],\n",
+       "       [7.51074119e-05, 3.17766175e+00],\n",
+       "       [9.96726161e-01, 2.73633323e+00],\n",
+       "       [9.37668137e-01, 2.76323527e+00],\n",
+       "       [2.78148785e-05, 3.90537318e+00]])"
       ]
      },
      "execution_count": 10,
