--- a/doc/source/problems/parallelization.ipynb
+++ b/doc/source/problems/parallelization.ipynb
@@ -100,13 +100,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.56 ms, sys: 1.41 ms, total: 7.96 ms\n",
-      "Wall time: 1.97 ms\n"
+      "361 µs ± 14 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%time F = problem.evaluate(X)"
+    "%timeit F = problem.evaluate(X)"
    ]
   },
   {
@@ -152,13 +151,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 127 ms, sys: 27.7 ms, total: 154 ms\n",
-      "Wall time: 171 ms\n"
+      "193 ms ± 5.41 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%time F = problem.evaluate(X)"
+    "%timeit F = problem.evaluate(X)"
    ]
   },
   {
@@ -179,6 +177,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Generic Starmap Interface\n",
+    "\n",
+    "Another way of performing elementwise evaluation is to provide an external function that provides the \"starmap\" interface,\n",
+    "as in the Python standard library `multiprocessing.Pool.starmap` [function](https://docs.python.org/3/library/multiprocessing.html?highlight=multiprocessing#multiprocessing.pool.Pool.starmap).\n",
+    "\n",
+    "**NOTE:** Unfortunately, due to complications with using `multiprocessing` in Jupyter, the example below will not run successfully inside a notebook.\n",
+    "`MyProblem` must be defined in a standard Python script for this method to work (but it should then be possible to import it, create an instance, and run the evaluation from a notebook)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import multiprocessing\n",
+    "\n",
+    "with multiprocessing.Pool() as pool:\n",
+    "    problem = MyProblem(\n",
+    "        elementwise_evaluation = True,\n",
+    "        parallelization = ('starmap', pool.starmap)\n",
+    "    )\n",
+    "\n",
+    "    # F = problem.evaluate(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Dask"
    ]
   },
@@ -186,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "More advances it to distribute the evaluation function to a couple of workers. There exists a couple of framework that support the distribution of code. For our framework, we recommend using [Dask](https://dask.org).\n",
+    "More advanced is to distribute the evaluation function to a couple of workers. There exists a couple of framework that support the distribution of code. For our framework, we recommend using [Dask](https://dask.org).\n",
     "\n",
     "A documentation to setup the cluster is available [here](https://docs.dask.org/en/latest/setup/cli.html). Basically, you first start a scheduler somewhere and then connect workers to it. Then, a client object connects to the scheduler and distributes the jobs automatically for you."
    ]
@@ -309,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
