the multiprocessing example does work in a notebook!

--- a/doc/source/problems/parallelization.ipynb
+++ b/doc/source/problems/parallelization.ipynb
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "361 µs ± 14 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "184 µs ± 5.11 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "193 ms ± 5.41 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "147 ms ± 3.17 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -180,15 +180,12 @@
     "### Generic Starmap Interface\n",
     "\n",
     "Another way of performing elementwise evaluation is to provide an external function that provides the \"starmap\" interface,\n",
-    "as in the Python standard library `multiprocessing.Pool.starmap` [function](https://docs.python.org/3/library/multiprocessing.html?highlight=multiprocessing#multiprocessing.pool.Pool.starmap).\n",
-    "\n",
-    "**NOTE:** Unfortunately, due to complications with using `multiprocessing` in Jupyter, the example below will not run successfully inside a notebook.\n",
-    "`MyProblem` must be defined in a standard Python script for this method to work (but it should then be possible to import it, create an instance, and run the evaluation from a notebook)."
+    "as in the Python standard library `multiprocessing.Pool.starmap` [function](https://docs.python.org/3/library/multiprocessing.html?highlight=multiprocessing#multiprocessing.pool.Pool.starmap)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -200,15 +197,36 @@
    },
    "outputs": [],
    "source": [
-    "import multiprocessing\n",
+    "import multiprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "239 ms ± 4.38 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
     "\n",
     "with multiprocessing.Pool() as pool:\n",
     "    problem = MyProblem(\n",
-    "        elementwise_evaluation = True,\n",
     "        parallelization = ('starmap', pool.starmap)\n",
     "    )\n",
     "\n",
-    "    # F = problem.evaluate(X)"
+    "    F = problem.evaluate(X)"
    ]
   },
   {
@@ -216,15 +234,6 @@
    "metadata": {},
    "source": [
     "### Dask"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "More advanced is to distribute the evaluation function to a couple of workers. There exists a couple of framework that support the distribution of code. For our framework, we recommend using [Dask](https://dask.org).\n",
-    "\n",
-    "A documentation to setup the cluster is available [here](https://docs.dask.org/en/latest/setup/cli.html). Basically, you first start a scheduler somewhere and then connect workers to it. Then, a client object connects to the scheduler and distributes the jobs automatically for you."
    ]
   },
   {
