PatternSearch Correct Implementation

--- a/doc/source/problems/parallelization.ipynb
+++ b/doc/source/problems/parallelization.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "361 µs ± 14 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "223 µs ± 13 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -114,12 +114,12 @@
    "source": [
     "### Multiple Threads \n",
     "\n",
-    "Another way of defining a problem is by using the *elementwise_evaluation* and then execute each evaluation is a different thread. This can be automatically achieved by the following code:"
+    "Another way of defining a problem is by using the `elementwise_evaluation` and then execute each evaluation is a different thread. This can be automatically achieved by the following code:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "193 ms ± 5.41 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "147 ms ± 2.48 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -179,16 +179,15 @@
    "source": [
     "### Generic Starmap Interface\n",
     "\n",
-    "Another way of performing elementwise evaluation is to provide an external function that provides the \"starmap\" interface,\n",
+    "Another way of parallelized evaluation is to provide an external function that provides the \"starmap\" interface,\n",
     "as in the Python standard library `multiprocessing.Pool.starmap` [function](https://docs.python.org/3/library/multiprocessing.html?highlight=multiprocessing#multiprocessing.pool.Pool.starmap).\n",
     "\n",
-    "**NOTE:** Unfortunately, due to complications with using `multiprocessing` in Jupyter, the example below will not run successfully inside a notebook.\n",
-    "`MyProblem` must be defined in a standard Python script for this method to work (but it should then be possible to import it, create an instance, and run the evaluation from a notebook)."
+    "**NOTE:** For this example the problem is supposed to be of type `elementwise_evaluation=True`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -202,13 +201,34 @@
    "source": [
     "import multiprocessing\n",
     "\n",
-    "with multiprocessing.Pool() as pool:\n",
-    "    problem = MyProblem(\n",
-    "        elementwise_evaluation = True,\n",
-    "        parallelization = ('starmap', pool.starmap)\n",
-    "    )\n",
-    "\n",
-    "    # F = problem.evaluate(X)"
+    "pool = multiprocessing.Pool()\n",
+    "problem = MyProblem(parallelization = ('starmap', pool.starmap))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94.3 ms ± 15.2 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit problem.evaluate(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pool.close()"
    ]
   },
   {
@@ -229,17 +249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dask.distributed import Client\n",
+    "client = Client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from dask.distributed import Client\n",
     "from pymoo.model.problem import Problem\n",
-    "\n",
-    "\n",
-    "# connect to the dask scheduler\n",
-    "client = Client(address=\"host-94108.dhcp.egr.msu.edu:8786\")\n",
     "\n",
     "# define the evaluation function that directly returns the objective and/or\n",
     "# constraint values. Please note it must be elementwise_evaluation.\n",
@@ -263,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "111 ms ± 46.4 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "37.4 ms ± 7.88 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -289,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,19 +338,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.11 s ± 41 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "485 ms ± 45.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%timeit problem.evaluate(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do not forget to close the client if it is running locally!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.close()"
    ]
   }
  ],
@@ -345,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
